<resources>
    <string name="app_name">UNIFY</string>
    <string name="tab_text_1">TASKS</string>
    <string name="tab_text_2">SUBJECTS</string>
    <string name="title">Title</string>
    <string name="date">Deadline</string>
    <string name="description">Description</string>
    <string name="titleAlertDialogDeleteTask">Delete Task</string>
    <string name="messageAlertDialogueDeleteTask">Are you sure ?</string>

    <string name="data_format">dd/mm/yyyy</string>
    <string name="hour_format">hh:mm</string>
    <string name="subject">#Subject</string>
    <string name="hour">Hour</string>

    <string name="nameSubject">Subject</string>


</resources>
